--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <h1>BrandRadar</h1>
     <nav>
+      <button class="hamburger" onclick="toggleMenu()">☰</button>
       <ul class="main-nav">
         <li><a href="#">Home</a></li>
         <li class="dropdown">
@@ -46,5 +47,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
