--- a/index.html
+++ b/index.html
@@ -9,31 +9,34 @@
 <body>
   <header>
     <h1>BrandRadar</h1>
-   <button class="hamburger" onclick="toggleMenu()">☰</button>
-<nav>
-  <ul class="main-nav">
-    <li><a href="#">Home</a></li>
-    <li class="dropdown">
-      <a href="#">Clothing</a>
-      <ul class="submenu gender">
-        <li><a href="#">Men</a></li>
-        <li><a href="#">Women</a></li>
-        <li><a href="#">Children</a></li>
-      </ul>
-      <ul class="submenu category">
-        <li><a href="#">Jackets</a></li>
-        <li><a href="#">Pants</a></li>
-        <li><a href="#">Sweaters</a></li>
-        <li><a href="#">T-shirts</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Supplements</a></li>
-    <li><a href="#">Equipment</a></li>
-    <li><a href="#">Popular</a></li>
-    <li class="admin-only"><a href="#">Admin</a></li>
-  </ul>
-</nav>
   </header>
+
+  <!-- Hamburger-menyknapp plassert utenfor <nav> -->
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+
+  <nav>
+    <ul class="main-nav">
+      <li><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a href="#">Clothing</a>
+        <ul class="submenu gender">
+          <li><a href="#">Men</a></li>
+          <li><a href="#">Women</a></li>
+          <li><a href="#">Children</a></li>
+        </ul>
+        <ul class="submenu category">
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Sweaters</a></li>
+          <li><a href="#">T-shirts</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Supplements</a></li>
+      <li><a href="#">Equipment</a></li>
+      <li><a href="#">Popular</a></li>
+      <li class="admin-only"><a href="#">Admin</a></li>
+    </ul>
+  </nav>
 
   <main id="product-list">
     <h2>Popular Products</h2>
