--- a/index.html
+++ b/index.html
@@ -1,56 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BrandRadar</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>BrandRadar – Hjem</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>BrandRadar</h1>
+
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="logo">BrandRadar</div>
+
+    <div class="search-container">
+      <input type="text" placeholder="Søk etter produkter eller merker...">
+    </div>
+
+    <nav class="desktop-nav">
+      <a href="#">Home</a>
+      <a href="#">News</a>
+      <a href="#">Brands</a>
+      <a href="#">Popular</a>
+    </nav>
+
+    <div class="hamburger" onclick="toggleMobileMenu()">☰</div>
   </header>
 
-  <!-- Hamburger-menyknapp plassert utenfor <nav> -->
-  <button class="hamburger" onclick="toggleMenu()">☰</button>
-
-  <nav>
-    <ul class="main-nav">
-      <li><a href="#">Home</a></li>
+  <!-- KATEGORI-MENY (DESKTOP) -->
+  <nav class="category-menu desktop-only">
+    <ul>
       <li class="dropdown">
         <a href="#">Clothing</a>
-        <ul class="submenu gender">
+        <ul class="dropdown-menu">
+          <li>Men
+            <ul>
+              <li><a href="#">Jackets</a></li>
+              <li><a href="#">Sweaters</a></li>
+              <li><a href="#">T-Shirts</a></li>
+              <li><a href="#">Pants</a></li>
+              <li><a href="#">Gymwear</a></li>
+            </ul>
+          </li>
+          <li>Women
+            <ul>
+              <li><a href="#">Jackets</a></li>
+              <li><a href="#">Sweaters</a></li>
+              <li><a href="#">T-Shirts</a></li>
+              <li><a href="#">Pants</a></li>
+              <li><a href="#">Gymwear</a></li>
+            </ul>
+          </li>
+          <li>Children
+            <ul>
+              <li><a href="#">Jackets</a></li>
+              <li><a href="#">Sweaters</a></li>
+              <li><a href="#">T-Shirts</a></li>
+              <li><a href="#">Pants</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+
+      <li class="dropdown">
+        <a href="#">Supplements</a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Protein Bars</a></li>
+          <li>Powder
+            <ul>
+              <li><a href="#">Creatine</a></li>
+              <li><a href="#">Protein Powder</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Vitamins</a></li>
+        </ul>
+      </li>
+
+      <li class="dropdown">
+        <a href="#">Shoes</a>
+        <ul class="dropdown-menu">
           <li><a href="#">Men</a></li>
           <li><a href="#">Women</a></li>
           <li><a href="#">Children</a></li>
         </ul>
-        <ul class="submenu category">
-          <li><a href="#">Jackets</a></li>
-          <li><a href="#">Pants</a></li>
-          <li><a href="#">Sweaters</a></li>
-          <li><a href="#">T-shirts</a></li>
-        </ul>
       </li>
-      <li><a href="#">Supplements</a></li>
-      <li><a href="#">Equipment</a></li>
-      <li><a href="#">Popular</a></li>
-      <li class="admin-only"><a href="#">Admin</a></li>
+
+      <li><a href="#">Trends</a></li>
     </ul>
   </nav>
 
-  <main id="product-list">
-    <h2>Popular Products</h2>
-    <div id="products-container"></div>
-  </main>
+  <!-- MOBIL-MENY -->
+  <nav class="mobile-nav" id="mobileMenu">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Brands</a></li>
+      <li><a href="#">Popular</a></li>
+      <li>
+        <button onclick="toggleSub('mob-clothing')">Clothing ⯆</button>
+        <ul id="mob-clothing" class="sub-menu">
+          <li>Men
+            <ul>
+              <li><a href="#">Jackets</a></li>
+              <li><a href="#">T-Shirts</a></li>
+            </ul>
+          </li>
+          <li>Women
+            <ul>
+              <li><a href="#">Sweaters</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <button onclick="toggleSub('mob-supplements')">Supplements ⯆</button>
+        <ul id="mob-supplements" class="sub-menu">
+          <li><a href="#">Protein Bars</a></li>
+          <li><a href="#">Creatine</a></li>
+        </ul>
+      </li>
+      <li>
+        <button onclick="toggleSub('mob-shoes')">Shoes ⯆</button>
+        <ul id="mob-shoes" class="sub-menu">
+          <li><a href="#">Men</a></li>
+          <li><a href="#">Women</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Trends</a></li>
+    </ul>
+  </nav>
 
-  <footer>
-    <p>&copy; 2025 BrandRadar</p>
+ <!-- POPULÆRT NÅ fra Google Sheets -->
+<section class="popular-section">
+  <h2>Populært nå</h2>
+  <div id="products-container" class="products">
+    <!-- Produktene hentes via JS -->
+  </div>
+</section>
+
+
+  <!-- FOOTER -->
+  <footer style="text-align:center; padding: 20px 0; color:#555;">
+    © 2025 BrandRadar
   </footer>
 
-  <script src="script.js"></script>
+  <script>
+    function toggleMobileMenu() {
+      document.getElementById('mobileMenu').classList.toggle('open');
+    }
+
+    function toggleSub(id) {
+      document.getElementById(id).classList.toggle('open');
+    }
+  </script>
+
+<script src="script.js"></script>
+  
 </body>
 </html>
-
 
 
 
