--- a/index.html
+++ b/index.html
@@ -29,63 +29,99 @@
   <!-- KATEGORI-MENY (DESKTOP) -->
   <nav class="category-menu desktop-only">
     <ul>
-      <li class="dropdown">
-        <a href="#">Clothing</a>
-        <ul class="dropdown-menu">
-          <li>Men
-            <ul>
-              <li><a href="#">Jackets</a></li>
-              <li><a href="#">Sweaters</a></li>
-              <li><a href="#">T-Shirts</a></li>
-              <li><a href="#">Pants</a></li>
-              <li><a href="#">Gymwear</a></li>
-            </ul>
-          </li>
-          <li>Women
-            <ul>
-              <li><a href="#">Jackets</a></li>
-              <li><a href="#">Sweaters</a></li>
-              <li><a href="#">T-Shirts</a></li>
-              <li><a href="#">Pants</a></li>
-              <li><a href="#">Gymwear</a></li>
-            </ul>
-          </li>
-          <li>Children
-            <ul>
-              <li><a href="#">Jackets</a></li>
-              <li><a href="#">Sweaters</a></li>
-              <li><a href="#">T-Shirts</a></li>
-              <li><a href="#">Pants</a></li>
-            </ul>
-          </li>
+  <!-- Clothing -->
+  <li class="dropdown">
+    <a href="#">Clothing</a>
+    <ul class="dropdown-menu">
+      <li class="submenu-category">
+        <span>Men</span>
+        <ul>
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Sweaters</a></li>
+          <li><a href="#">T-Shirts</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Gymwear</a></li>
         </ul>
       </li>
+      <li class="submenu-category">
+        <span>Women</span>
+        <ul>
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Sweaters</a></li>
+          <li><a href="#">T-Shirts</a></li>
+          <li><a href="#">Pants</a></li>
+          <li><a href="#">Gymwear</a></li>
+        </ul>
+      </li>
+      <li class="submenu-category">
+        <span>Children</span>
+        <ul>
+          <li><a href="#">Jackets</a></li>
+          <li><a href="#">Sweaters</a></li>
+          <li><a href="#">T-Shirts</a></li>
+          <li><a href="#">Pants</a></li>
+        </ul>
+      </li>
+    </ul>
+  </li>
 
-      <li class="dropdown">
-        <a href="#">Supplements</a>
-        <ul class="dropdown-menu">
+  <!-- Supplements -->
+  <li class="dropdown">
+    <a href="#">Supplements</a>
+    <ul class="dropdown-menu">
+      <li class="submenu-category">
+        <span>Protein</span>
+        <ul>
           <li><a href="#">Protein Bars</a></li>
-          <li>Powder
-            <ul>
-              <li><a href="#">Creatine</a></li>
-              <li><a href="#">Protein Powder</a></li>
-            </ul>
-          </li>
+          <li><a href="#">Protein Powder</a></li>
+        </ul>
+      </li>
+      <li class="submenu-category">
+        <span>Creatine</span>
+        <ul>
+          <li><a href="#">Creatine</a></li>
+        </ul>
+      </li>
+      <li class="submenu-category">
+        <span>Vitamins</span>
+        <ul>
           <li><a href="#">Vitamins</a></li>
         </ul>
       </li>
+    </ul>
+  </li>
 
-      <li class="dropdown">
-        <a href="#">Shoes</a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Men</a></li>
-          <li><a href="#">Women</a></li>
-          <li><a href="#">Children</a></li>
+  <!-- Shoes -->
+  <li class="dropdown">
+    <a href="#">Shoes</a>
+    <ul class="dropdown-menu">
+      <li class="submenu-category">
+        <span>Men</span>
+        <ul>
+          <li><a href="#">Sneakers</a></li>
+          <li><a href="#">Running</a></li>
         </ul>
       </li>
-
-      <li><a href="#">Trends</a></li>
+      <li class="submenu-category">
+        <span>Women</span>
+        <ul>
+          <li><a href="#">Sneakers</a></li>
+          <li><a href="#">Casual</a></li>
+        </ul>
+      </li>
+      <li class="submenu-category">
+        <span>Children</span>
+        <ul>
+          <li><a href="#">Everyday</a></li>
+        </ul>
+      </li>
     </ul>
+  </li>
+
+  <!-- Trends -->
+  <li><a href="#">Trends</a></li>
+</ul>
+
   </nav>
 
   <!-- MOBIL-MENY -->
@@ -157,6 +193,7 @@
   
 </body>
 </html>
+
 
 
 
