--- a/index.html
+++ b/index.html
@@ -183,8 +183,28 @@
       document.querySelector(".category-menu").classList.toggle("show");
     }
   </script>
+
+
+  <script>
+  function toggleMobileMenu(headerElement) {
+    const submenu = headerElement.nextElementSibling;
+    const isOpen = submenu.style.display === "block";
+
+    // Lukk alle åpne menyer først
+    document.querySelectorAll('.mobile-submenu').forEach(menu => {
+      menu.style.display = "none";
+    });
+
+    // Vis denne menyen bare hvis den ikke allerede var åpen
+    if (!isOpen) {
+      submenu.style.display = "block";
+    }
+  }
+</script>
+
 </body>
 </html>
+
 
 
 
